iptables.conf
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p icmp --icmp-type 8 -m state --state NEW -j ACCEPT
-N SSH
-A INPUT -m tcp -p tcp --dport 22 -m recent --set --name SSH --rsource -j SSH
-A SSH -m recent --update --seconds 120 --hitcount 3 --name SSH --rsource -m limit -j LOG --log-prefix "SSH-Bruteforce: " --log-level 6
-A SSH -m tcp -p tcp -m recent --update --seconds 120 --hitcount 3 --name SSH --rsource -j REJECT --reject-with tcp-reset
-A SSH -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2222 -m state --state NEW -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
